# ha-skylink

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/skylink/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  cover.py  manifest.json  strings.json
custom_components/skylink/_client/: __init__.py  client.py  domain.py  errors.py  http.py  mqtt.py  protocol.py
custom_components/skylink/translations/: en.json
docs/: PROTOCOL.md
scripts/: live-test.py  mosquitto.conf  test-integration.sh
tests/integration/: conftest.py  test_client.py  test_mqtt.py
tests/unit/: test_binary_sensor.py  test_client.py  test_cover.py  test_domain.py  test_http.py  test_mqtt.py  test_protocol.py
